# anysd

./: .gitignore  LICENSE  MANIFEST.in  README.md  conf.py  config.yaml  main.py  publish.sh  pyproject.toml  sample.txt
src/anysd/: conf.py  main.py  utils.py
